added currency flag property to float and decimal fields

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -281,7 +281,7 @@ _UI_DerivedField_sortableGroup_description = Ob dieses Feld als Gruppierungskrit
 _UI_CalculatedField_operands_feature = Operanden
 _UI_CalculatedField_operands_description = Liste von Feldern, die als Operanden während der Berechnung verwendet werden.
 _UI_BooleanField_ajaxTogglability_feature = Ajax Umschalter
-_UI_BooleanField_ajaxTogglability_description = Wenn auf true gesetzt kann man dieses Feld umschalten durch Klicken auf die Feld-Icons auf View- und Display-Seiten.
+_UI_BooleanField_ajaxTogglability_description = Wenn auf true gesetzt, kann man dieses Feld umschalten durch Klicken auf die Feld-Icons auf View- und Display-Seiten.
 _UI_AbstractIntegerField_length_feature = Länge
 _UI_AbstractIntegerField_length_description = Die Länge dieses Feldes.
 _UI_AbstractIntegerField_sortablePosition_feature = Sortable-Position
@@ -304,6 +304,8 @@ _UI_DecimalField_maxValue_feature = Max Wert
 _UI_DecimalField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
 _UI_DecimalField_aggregationField_feature = Aggregatsfeld
 _UI_DecimalField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
+_UI_DecimalField_currency_feature = Währung
+_UI_DecimalField_currency_description = Wenn auf true gesetzt, wird diese Zahl als Währung behandelt.
 _UI_FloatField_length_feature = Länge
 _UI_FloatField_length_description = Die Länge dieses Feldes.
 _UI_FloatField_minValue_feature = Min Wert
@@ -312,6 +314,8 @@ _UI_FloatField_maxValue_feature = Max Wert
 _UI_FloatField_maxValue_description = Maximaler Wert (0 zum Deaktivieren der Prüfung).
 _UI_FloatField_aggregationField_feature = Aggregatsfeld
 _UI_FloatField_aggregationField_description = Ob dieses Feld aggregierte Werte speichern soll oder nicht. Wenn auf true gesetzt, werden zusätzliche Methoden zur Aggregation generiert.
+_UI_FloatField_currency_feature = Währung
+_UI_FloatField_currency_description = Wenn auf true gesetzt, wird diese Zahl als Währung behandelt.
 _UI_AbstractStringField_fixed_feature = Fixe Länge
 _UI_AbstractStringField_fixed_description = Ob dieses Feld eine fixe Länge hat oder nicht.
 _UI_AbstractStringField_nospace_feature = Kein Space
