added cascade reverse property for join relationships.

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -409,7 +409,9 @@ _UI_JoinRelationship_useAutoCompletion_description = Ob das Feld durch ein norma
 _UI_JoinRelationship_fetchType_feature = Fetch-Modus
 _UI_JoinRelationship_fetchType_description = Der Fetch Type dieser Relation.
 _UI_JoinRelationship_cascade_feature = Kaskade
-_UI_JoinRelationship_cascade_description = Kaskade-Optionen auf Anwendungsebene.
+_UI_JoinRelationship_cascade_description = Kaskade-Optionen auf Anwendungsebene aus Quell-Sicht.
+_UI_JoinRelationship_cascadeReverse_feature = Kascade Rückweg
+_UI_JoinRelationship_cascadeReverse_description = Kaskade-Optionen auf Anwendungsebene aus Target-Sicht.
 _UI_JoinRelationship_onUpdate_feature = Bei Update
 _UI_JoinRelationship_onUpdate_description = Kaskade-Option für Update-Operationen auf Datenbankebene.
 _UI_JoinRelationship_onDelete_feature = Bei Delete
