--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -1,4 +1,4 @@
-# (c) 2007-2011 Guite - Guckelsberger Information Technology
+# (c) 2007-2012 Axel Guckelsberger
 
 pluginName = ModuleStudio Meta-Modell Edit Plug-in
 providerName = Guite - Guckelsberger Informationstechnik
