introducing upload field property for optional filesize limit

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -348,6 +348,8 @@ _UI_UploadField_namingScheme_feature = Namensschema
 _UI_UploadField_namingScheme_description = Wie hochgeladene Dateien physikalisch benannt werden sollen.
 _UI_UploadField_subFolderName_feature = Name Unterverzeichnis
 _UI_UploadField_subFolderName_description = Name des Unterverzeichnisses zur Speicherung dieser Dateien. Falls leer gelassen, wird der Name des Feldes benutzt.
+_UI_UploadField_allowedFileSize_feature = Erlaubte Dateigröße
+_UI_UploadField_allowedFileSize_description = Die maximal erlaubte Dateigröße (0 = kein Limit).
 _UI_ListField_length_feature = Länge
 _UI_ListField_length_description = Die Länge dieses Feldes.
 _UI_ListField_multiple_feature = Mehrfach
