added properties for importing other application models

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -172,6 +172,9 @@ _UI_Application_views_feature = Views
 _UI_Application_views_description = View-Schichten dieser Anwendung.
 _UI_Application_applicationType_feature = Anwendungsart
 _UI_Application_applicationType_description = Art der modellierten Anwendung. Wird noch nicht verwendet.
+_UI_ReferredApplication_minVersion_feature = Minimale Version
+_UI_ReferredApplication_maxVersion_feature = Maximale Version
+_UI_ReferredApplication_importURI_feature = Import-URI
 _UI_Models_defaultDataSource_feature = Standard-Datenquelle
 _UI_Models_defaultDataSource_description = Ob dies die (interne) Standarddatenquelle ist. False steht für externe Datenquellen.
 _UI_Models_application_feature = Anwendung
