docblocks and coding style improvements

--- a/production/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.controller.nl1.de/plugin_de.properties
@@ -52,3 +52,4 @@ metatype.name.StartEvent_3208=Start-Ereignis
 metatype.name.EndEvent_3209=End-Ereignis
 metatype.name.Redirect_4201=Umleitung
 metatype.name.UserTransition_4202=Benutzeraktion
+metatype.name.ActionHandler_4203=Action Handler Zuweisung
