introduce orphan removal property also for many-to-many relationships

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -437,6 +437,8 @@ _UI_ManyToManyRelationship_refClass_feature = Ref.-Klasse
 _UI_ManyToManyRelationship_refClass_description = Name der Referenz Record-Klasse um die Link-Tabelle zu verwalten (z. B. OrderProduct).
 _UI_ManyToManyRelationship_orderBy_feature = Sortieren nach
 _UI_ManyToManyRelationship_orderBy_description = Optionaler Feldname zur Sortierung der verbundenen Entitäten.
+_UI_ManyToManyRelationship_orphanRemoval_feature = Waisen entfernen
+_UI_ManyToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
 _UI_ManyToManyRelationship_indexBy_feature = Indiziert über
 _UI_ManyToManyRelationship_indexBy_description = Optionaler Feldname, der für eine indizierte Assoziation benutzt wird.
 _UI_InheritanceRelationship_strategy_feature = Strategie
