added new identifier strategies from Doctrine 2.3

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -586,6 +586,8 @@ _UI_EntityIdentifierStrategy_AUTO_literal = AUTO
 _UI_EntityIdentifierStrategy_SEQUENCE_literal = SEQUENCE
 _UI_EntityIdentifierStrategy_TABLE_literal = TABLE
 _UI_EntityIdentifierStrategy_IDENTITY_literal = IDENTITY
+_UI_EntityIdentifierStrategy_UUID_literal = UUID
+_UI_EntityIdentifierStrategy_CUSTOM_literal = CUSTOM
 _UI_EntityChangeTrackingPolicy_DEFERRED_IMPLICIT_literal = DEFERRED_IMPLICIT
 _UI_EntityChangeTrackingPolicy_DEFERRED_EXPLICIT_literal = DEFERRED_EXPLICIT
 _UI_EntityChangeTrackingPolicy_NOTIFY_literal = NOTIFY
