removed onUpdate support as it is not supported anymore in Doctrine 2.2+

--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/nl/de/messages.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/nl/de/messages.properties
@@ -286,6 +286,7 @@ MostDslQuickfixProvider_ChangeStrategy=Strategie verändern
 MostDslQuickfixProvider_ChangeTarget=Ziel verändern
 MostDslQuickfixProvider_ChangeTheEntityByDisablingTheGeographicalFlag=Die Entität verändern durch Deaktivieren des Flags für geographische Daten
 MostDslQuickfixProvider_ChangeTheEntityByDisablingTheLoggableFlag=Die Entität verändern durch Deaktivieren des Loggable-Flags
+MostDslQuickfixProvider_ChangeTheEntityFieldByUnsettingTheSluggablePosition=Das Feld verändern durch Zurücksetzen der Sluggable Position
 MostDslQuickfixProvider_ChangeTheEntityNameByAppendingTheWordObject=Den Namen der Entität durch Anhängen des Wortes Object verändern
 MostDslQuickfixProvider_ChangeTheFieldToAMultipleList=Das Feld zu einer Mehrfachliste verändern
 MostDslQuickfixProvider_ChangeTheSourceActionToTheNextAvailableOne=Die Quell-Aktion zur nächsten verfügbaren verändern
@@ -457,6 +458,7 @@ MostDslQuickfixProvider_UnsetsAllFlagsExceptHtmlColour=Alle Flags außer html col
 MostDslQuickfixProvider_UnsetsAllFlagsExceptLanguage=Alle Flags außer language zurücksetzen
 MostDslQuickfixProvider_UnsetsAllFlagsExceptPassword=Alle Flags außer password zurücksetzen
 MostDslQuickfixProvider_UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
+MostDslQuickfixProvider_UnsetSluggablePosition=Die Sluggable Position zurücksetzen
 MostDslQuickfixProvider_UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheFutureFlag=Das future-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheMandatoryFlag=Das mandatory-Flag zurücksetzen
