added different types of application dependencies

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -173,8 +173,13 @@ _UI_Application_views_description = View-Schichten dieser Anwendung.
 _UI_Application_applicationType_feature = Anwendungsart
 _UI_Application_applicationType_description = Art der modellierten Anwendung. Wird noch nicht verwendet.
 _UI_ReferredApplication_minVersion_feature = Minimale Version
+_UI_ReferredApplication_minVersion_description = Die minimale Version.
 _UI_ReferredApplication_maxVersion_feature = Maximale Version
+_UI_ReferredApplication_maxVersion_description = Die maximale Version.
 _UI_ReferredApplication_importURI_feature = Import-URI
+_UI_ReferredApplication_importURI_description = URI zur importierten Modelldatei.
+_UI_ReferredApplication_dependencyType_feature = Art der Abhängigkeiten
+_UI_ReferredApplication_dependencyType_description = Die Art von Abhängigkeit, die für die referenzierte Anwendung verwendet werden soll.
 _UI_Models_defaultDataSource_feature = Standard-Datenquelle
 _UI_Models_defaultDataSource_description = Ob dies die (interne) Standarddatenquelle ist. False steht für externe Datenquellen.
 _UI_Models_application_feature = Anwendung
@@ -574,6 +579,9 @@ _UI_Unknown_feature = Unspezifiziert
 _UI_ApplicationType_WEB_literal = WEB
 _UI_ApplicationType_NATIVE_literal = NATIVE
 _UI_ApplicationType_EMBEDDED_literal = EMBEDDED
+_UI_ApplicationDependencyType_REQUIREMENT_literal = REQUIREMENT
+_UI_ApplicationDependencyType_RECOMMENDATION_literal = RECOMMENDATION
+_UI_ApplicationDependencyType_CONFLICT_literal = CONFLICT
 _UI_ModelLoadingType_CONSERVATIVE_literal = CONSERVATIVE
 _UI_ModelLoadingType_AGGRESSIVE_literal = AGGRESSIVE
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
