added notes about category multi selections

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -238,6 +238,8 @@ _UI_Entity_standardFields_feature = Standard-Felder
 _UI_Entity_standardFields_description = Ob diese Entität Standard-Felder haben soll oder nicht.
 _UI_Entity_categorisable_feature = Kategorien
 _UI_Entity_categorisable_description = Ob diese Entität Kategorien unterstützen soll oder nicht.
+_UI_Entity_categorisableMultiSelection_feature = Kategorien Mehrfachauswahl
+_UI_Entity_categorisableMultiSelection_description = Ob mehrere Kategorien ausgewählt werden können oder nicht.
 _UI_Entity_attributable_feature = Attribute
 _UI_Entity_attributable_description = Ob diese Entität Attribute unterstützen soll oder nicht.
 _UI_Entity_metaData_feature = Meta-Daten
