added new validation constraints including quick fixes for invalid field lengths

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/nl/de/messages.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/nl/de/messages.properties
@@ -96,6 +96,7 @@ MostDslJavaValidator.EntityFieldDateTimeNeedsValidDefaultValue=Der Standardwert 
 MostDslJavaValidator.EntityFieldDecimalMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslJavaValidator.EntityFieldDecimalNeedsValidDefaultValue=Der Standardwert für ein Decimal-Feld muss eine Fließkommazahl sein.
 MostDslJavaValidator.EntityFieldDecimalScaleMustNotGreaterLength=Die Länge (Präzision) eines Decimal-Feldes muss größer sein als die Skalierung.
+MostDslJavaValidator.EntityFieldDefaultValueTooLong=Der Standardwert ist zu lang für die angegebene Feldlänge.
 MostDslJavaValidator.EntityFieldEmailNeedsValidDefaultValue=Der Standardwert für ein E-Mail-Feld muss eine gültige E-Mail-Adresse sein.
 MostDslJavaValidator.EntityFieldFloatMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslJavaValidator.EntityFieldFloatNeedsValidDefaultValue=Der Standardwert für ein Float-Feld muss eine Fließkommazahl sein.
@@ -107,6 +108,8 @@ MostDslJavaValidator.EntityFieldListCheckboxesNeedsMultiple=Nur Listen mit Mehrf
 MostDslJavaValidator.EntityFieldListMustNotHaveTooManyDefaultItems=Die Liste ist nicht auf mehrfach gesetzt und kann daher nur einen Eintrag mit der Eigenschaft default enthalten.
 MostDslJavaValidator.EntityFieldListNeedsItem=Die Liste muss mindestens einen Eintrag enthalten.
 MostDslJavaValidator.EntityFieldMandatoryMustNotBeNullable=Pflichtfelder dürfen nicht auch nullable sein.
+MostDslJavaValidator.EntityFieldMaxValueTooLong=Der Maximalwert ist zu lang für die angegebene Feldlänge.
+MostDslJavaValidator.EntityFieldMinValueTooLong=Der Minimalwert ist zu lang für die angegebene Feldlänge.
 MostDslJavaValidator.EntityFieldNameMustBeLonger=Der Name des Feldes muss eine Länge von mindestens zwei Zeichen haben.
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedZikula=Der Name des Feldes ist ein reservierter Bezeichner (
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedZoo=Der Name des Feldes ist ein reservierter Bezeichner (_c, _a, _l).
