--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/nl/de/messages.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/nl/de/messages.properties
@@ -339,6 +339,7 @@ MostDslQuickfixProvider_DisableTheUseChecksFlag=Das useChecks-Flag deaktivieren
 MostDslQuickfixProvider_DropPrimaryKeyFlags=Primärschlüssel-Flags zurücksetzen
 MostDslQuickfixProvider_ExampleForAnotherModel=library/another.mostdsl
 MostDslQuickfixProvider_Extend=Erweitern
+MostDslQuickfixProvider_IncreaseFieldLength=Feldlänge erhöhen
 MostDslQuickfixProvider_IncreaseFieldLengthTo2=Feldlänge auf 2 erhöhen
 MostDslQuickfixProvider_IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider_IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
@@ -374,6 +375,9 @@ MostDslQuickfixProvider_NameOfImportedApplication=NameDerImportiertenAnwendung
 MostDslQuickfixProvider_RaiseLength=Länge hochsetzen
 MostDslQuickfixProvider_RaiseMaxValue=Max Wert hochsetzen
 MostDslQuickfixProvider_RaiseMaxVersion=Max Version hochsetzen
+MostDslQuickfixProvider_ReduceDefaultValue=Standardwert reduzieren
+MostDslQuickfixProvider_ReduceMaxValue=Maximalwert reduzieren
+MostDslQuickfixProvider_ReduceMinValue=Minimalwert reduzieren
 MostDslQuickfixProvider_Remove=Entfernen
 MostDslQuickfixProvider_RemoveAggregateFlag=aggregate-Flag entfernen
 MostDslQuickfixProvider_RemoveAllLayoutOrdersBetweenTheToContainersExceptTheFirstOne=Alle Layout Orders zwischen den zwei Containern außer der ersten entfernen
