extend auto complete related options for join relationships

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -415,7 +415,7 @@ _UI_JoinRelationship_nullable_description = Ob Null-Werte erlaubt sein sollen od
 _UI_JoinRelationship_unique_feature = Eindeutig
 _UI_JoinRelationship_unique_description = Ob diese Relation eindeutig ist oder nicht.
 _UI_JoinRelationship_useAutoCompletion_feature = Auto Completion verwenden
-_UI_JoinRelationship_useAutoCompletion_description = Ob das Feld durch ein normales Dropdown oder ein Auto Completion Feld repräsentiert wird.
+_UI_JoinRelationship_useAutoCompletion_description = Ob das Feld durch ein normales Dropdown-Feld oder durch ein Auto Completion Feld repräsentiert wird.
 _UI_JoinRelationship_fetchType_feature = Fetch-Modus
 _UI_JoinRelationship_fetchType_description = Der Fetch Type dieser Relation.
 _UI_JoinRelationship_cascade_feature = Kaskade
@@ -618,12 +618,6 @@ _UI_EntityTimestampableType_CREATE_literal = CREATE
 _UI_EntityTimestampableType_CHANGE_literal = CHANGE
 _UI_EntityIndexType_NORMAL_literal = NORMAL
 _UI_EntityIndexType_UNIQUE_literal = UNIQUE
-_UI_RelationEditType_ACTIVE_NONE_PASSIVE_CHOOSE_literal = ACTIVE_NONE_PASSIVE_CHOOSE
-_UI_RelationEditType_ACTIVE_NONE_PASSIVE_EDIT_literal = ACTIVE_NONE_PASSIVE_EDIT
-_UI_RelationEditType_ACTIVE_CHOOSE_PASSIVE_NONE_literal = ACTIVE_CHOOSE_PASSIVE_NONE
-_UI_RelationEditType_ACTIVE_EDIT_PASSIVE_CHOOSE_literal = ACTIVE_EDIT_PASSIVE_CHOOSE
-_UI_RelationEditType_ACTIVE_EDIT_PASSIVE_EDIT_literal = ACTIVE_EDIT_PASSIVE_EDIT
-_UI_RelationEditType_ACTIVE_EDIT_PASSIVE_NONE_literal = ACTIVE_EDIT_PASSIVE_NONE
 _UI_CascadeType_NONE_literal = NONE
 _UI_CascadeType_PERSIST_literal = PERSIST
 _UI_CascadeType_REMOVE_literal = REMOVE
@@ -640,9 +634,19 @@ _UI_CascadeType_PERSIST_REMOVE_DETACH_literal = PERSIST_REMOVE_DETACH
 _UI_CascadeType_PERSIST_MERGE_DETACH_literal = PERSIST_MERGE_DETACH
 _UI_CascadeType_REMOVE_MERGE_DETACH_literal = REMOVE_MERGE_DETACH
 _UI_CascadeType_ALL_literal = ALL
+_UI_RelationAutoCompletionUsage_NONE_literal = NONE
+_UI_RelationAutoCompletionUsage_ONLY_SOURCE_SIDE_literal = ONLY_SOURCE_SIDE
+_UI_RelationAutoCompletionUsage_ONLY_TARGET_SIDE_literal = ONLY_TARGET_SIDE
+_UI_RelationAutoCompletionUsage_BOTH_SIDES_literal = BOTH_SIDES
 _UI_RelationFetchType_LAZY_literal = LAZY
 _UI_RelationFetchType_EAGER_literal = EAGER
 _UI_RelationFetchType_EXTRA_LAZY_literal = EXTRA_LAZY
+_UI_RelationEditType_ACTIVE_NONE_PASSIVE_CHOOSE_literal = ACTIVE_NONE_PASSIVE_CHOOSE
+_UI_RelationEditType_ACTIVE_NONE_PASSIVE_EDIT_literal = ACTIVE_NONE_PASSIVE_EDIT
+_UI_RelationEditType_ACTIVE_CHOOSE_PASSIVE_NONE_literal = ACTIVE_CHOOSE_PASSIVE_NONE
+_UI_RelationEditType_ACTIVE_EDIT_PASSIVE_CHOOSE_literal = ACTIVE_EDIT_PASSIVE_CHOOSE
+_UI_RelationEditType_ACTIVE_EDIT_PASSIVE_EDIT_literal = ACTIVE_EDIT_PASSIVE_EDIT
+_UI_RelationEditType_ACTIVE_EDIT_PASSIVE_NONE_literal = ACTIVE_EDIT_PASSIVE_NONE
 _UI_InheritanceStrategyType_SINGLE_TABLE_literal = SINGLE_TABLE
 _UI_InheritanceStrategyType_JOINED_literal = JOINED
 _UI_CancelButtonType_CANCEL_literal = CANCEL
