added support for more than 120 different workflows, pending content listener, moderation panel, moderation block, mass object handling, tag module, start/end/confirm dates

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -264,6 +264,16 @@ _UI_Entity_tree_feature = Tree
 _UI_Entity_tree_description = Ob und welche Art von Baumstruktur verwendet werden soll.
 _UI_Entity_mappedSuperClass_feature = Gemappte Oberklasse
 _UI_Entity_mappedSuperClass_description = Ob dies eine gemappte Oberklasse ist oder eine normale Entität.
+_UI_Entity_workflow_feature = Workflow
+_UI_Entity_workflow_description = Der Workflow, der auf diese Entität angewendet wird.
+_UI_Entity_hasArchive_feature = Hat Archiv
+_UI_Entity_hasArchive_description = Ob der Workflow einen Zustand Archiviert mit automatischer Archivierung beinhalten soll.
+_UI_Entity_hasTray_feature = Hat Ablage
+_UI_Entity_hasTray_description = Ob der Workflow einen Zustand Ausgesetzt beinhalten soll.
+_UI_Entity_ownerPermission_feature = Eigner Zugriffsrecht
+_UI_Entity_ownerPermission_description = Ob Benutzer ihre eigenen Daten verwalten und ändern können sollen.
+_UI_Entity_softDeleteable_feature = Soft Deleteable
+_UI_Entity_softDeleteable_description = Ob gelöschte Einträge nur als gelöscht markiert werden sollen anstatt sie zu löschen.
 _UI_EntityField_entity_feature = Entität
 _UI_EntityField_entity_description = Entität, die dieses Feld enthält.
 _UI_DerivedField_defaultValue_feature = Standardwert
@@ -610,6 +620,9 @@ _UI_EntityLockType_PAGELOCK_PESSIMISTIC_WRITE_literal = PAGELOCK_PESSIMISTIC_WRI
 _UI_EntityTreeType_NONE_literal = NONE
 _UI_EntityTreeType_NESTED_literal = NESTED
 _UI_EntityTreeType_CLOSURE_literal = CLOSURE
+_UI_EntityWorkflowType_NONE_literal = NONE
+_UI_EntityWorkflowType_STANDARD_literal = STANDARD
+_UI_EntityWorkflowType_ENTERPRISE_literal = ENTERPRISE
 _UI_EntitySlugStyle_LOWERCASE_literal = LOWERCASE
 _UI_EntitySlugStyle_CAMEL_literal = CAMEL
 _UI_EntityTimestampableType_NONE_literal = NONE
