--- a/production/de.guite.modulestudio.mostdsl.nl1.de/nl/de/messages.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/nl/de/messages.properties
@@ -91,8 +91,14 @@ MostDslJavaValidator.EntityFieldAbstractDateMustNotBePastAndFuture=Ein Wert kann
 MostDslJavaValidator.EntityFieldAggregateNeedsLocking=Entitäten mit einem Aggregat-Feld sollten eine Locking-Strategie nutzen (optimistisches oder pessimistisches Lesen).
 MostDslJavaValidator.EntityFieldAggregateNeedsValidRelation=Aggregat-Felder funktionieren nur in Kombination mit einer ausgehenden und bidirektionalen Eins-zu-Viele-Beziehung mit persist-Kaskade.
 MostDslJavaValidator.EntityFieldAggregateNeedsValidSyntax=Die Benennung des aggregateFor-Attributes muss der Syntax targetAlias\#targetFieldName folgen (zum Beispiel views\#amount).
+MostDslJavaValidator.EntityFieldDateMustNotBeStartAndEnd=Ein Wert kann nicht gleichzeitig sowohl Start- als auch Enddatum repräsentieren.
 MostDslJavaValidator.EntityFieldDateNeedsValidDefaultValue=Der Standardwert für ein Datums-Feld muss dem Muster YYYY-MM-DD entsprechen oder now lauten.
+MostDslJavaValidator.EntityFieldDateOnlyOneEndDate=Pro Entität darf nur ein Feld ein Enddatum repräsentieren.
+MostDslJavaValidator.EntityFieldDateOnlyOneStartDate=Pro Entität darf nur ein Feld ein Startdatum repräsentieren.
+MostDslJavaValidator.EntityFieldDateTimeMustNotBeStartAndEnd=Ein Wert kann nicht gleichzeitig sowohl Start- als auch Enddatum repräsentieren.
 MostDslJavaValidator.EntityFieldDateTimeNeedsValidDefaultValue=Der Standardwert für ein Zeitstempel-Feld muss dem Muster YYYY-MM-DD HH:MM:SS entsprechen oder now lauten.
+MostDslJavaValidator.EntityFieldDateTimeOnlyOneEndDate=Pro Entität darf nur ein Feld ein Enddatum repräsentieren.
+MostDslJavaValidator.EntityFieldDateTimeOnlyOneStartDate=Pro Entität darf nur ein Feld ein Startdatum repräsentieren.
 MostDslJavaValidator.EntityFieldDecimalMinMustNotGreaterMax=Der Minimalwert darf nicht größer sein als der Maximalwert.
 MostDslJavaValidator.EntityFieldDecimalNeedsValidDefaultValue=Der Standardwert für ein Decimal-Feld muss eine Fließkommazahl sein.
 MostDslJavaValidator.EntityFieldDecimalScaleMustNotGreaterLength=Die Länge (Präzision) eines Decimal-Feldes muss größer sein als die Skalierung.
@@ -114,6 +120,7 @@ MostDslJavaValidator.EntityFieldNameMustBeLonger=Der Name des Feldes muss eine L
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedZikula=Der Name des Feldes ist ein reservierter Bezeichner (
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedZoo=Der Name des Feldes ist ein reservierter Bezeichner (_c, _a, _l).
 MostDslJavaValidator.EntityFieldNameMustNotBeReservedSymfony=Der Name des Feldes ist ein reservierter Bezeichner (_controller, _method, _locale).
+MostDslJavaValidator.EntityFieldNameMustNotBeReservedWorkflow=Der Name des Feldes ist ein reservierter Bezeichner (workflowState).
 MostDslJavaValidator.EntityFieldNameShouldBeLonger=Der Name des Feldes sollte eine Länge von mindestens drei Zeichen haben.
 MostDslJavaValidator.EntityFieldNameShouldStartWithLowerCase=Der Name des Feldes sollte mit einem Kleinbuchstaben beginnen.
 MostDslJavaValidator.EntityFieldNeedsEntity=Das Feld muss einer Entität zugewiesen werden.
@@ -189,6 +196,7 @@ MostDslJavaValidator.EntityNeedsModelContainer=Die Entität muss einem Model-Cont
 MostDslJavaValidator.EntityNeedsName=Jede Entität muss einen Namen haben.
 MostDslJavaValidator.EntityNeedsNameMultiple=Jede Entität muss einen Namen für mehrere Instanzen haben.
 MostDslJavaValidator.EntityOptimisticLockingNeedsVersionField=Entitäten mit optimistischem Locking müssen ein Feld enthalten, das als Versionsfeld deklariert ist.
+MostDslJavaValidator.EntityOwnerPermissionWithoutStandardFields=Entitäten mit Owner Permissions müssen die Standardfelder aktivieren.
 MostDslJavaValidator.EntitySluggableMustNotIncludeSlugField=Entitäten mit Sluggable-Erweiterung können kein Feld namens slug enthalten.
 MostDslJavaValidator.EntitySluggablePositionsMustBeUnique=Die Werte für die Sluggable-Position müssen eindeutig pro Entität sein.
 MostDslJavaValidator.EntitySortableFieldMustNotEqualSortableGroup=Die Sortable-Position darf nicht gleichzeitig die Sortable-Gruppe sein.
@@ -199,7 +207,7 @@ MostDslJavaValidator.EntityStandardFieldsMustNotContainReservedField=Daher dürfe
 MostDslJavaValidator.EntityStandardFieldsMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslJavaValidator.EntityStandardFieldsMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslJavaValidator.EntityTimestampableNeedsChangeTriggerReference=Das Timestampable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
-MostDslJavaValidator.EntityTimestampableNeedsValidChangeTriggerReference=Das Timestampable Change Trigger Feld muss den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
+MostDslJavaValidator.EntityTimestampableNeedsValidChangeTriggerReference=Das Timestampable Change Trigger Feld muss workflowState, den Namen eines Feldes oder einer Beziehung (property.field) referenzieren.
 MostDslJavaValidator.EntityTranslatableMustNotContainReserved=Entitäten mit übersetzbaren Feldern haben ein zusätzliches Feld für den Sprach-Code
 MostDslJavaValidator.EntityTranslatableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslJavaValidator.EntityTranslatableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
@@ -208,6 +216,7 @@ MostDslJavaValidator.EntityTreeMustNotContainReserved=Entitäten mit Tree-Erweite
 MostDslJavaValidator.EntityTreeMustNotContainReservedField=Daher dürfen Deine Felder diese Namen nicht enthalten.
 MostDslJavaValidator.EntityTreeMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslJavaValidator.EntityTreeMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
+MostDslJavaValidator.EntityWithArchiveRequiresEndDate=Entitäten mit einem Archiv müssen ein Zeitstempel- oder Datumsfeld enthalten, welches als Enddatum ausgezeichnet ist.
 MostDslJavaValidator.FormLabelNeedsField=Das Label muss auf ein Feld verweisen.
 MostDslJavaValidator.LayoutOrderMustNotBeSelfRelation=Eine Layout Order kann nicht zu sich selbst verlinken.
 MostDslJavaValidator.LayoutOrderMustNotMultipleBetweenTwoContainers=Es darf nicht mehr als eine Layout Order zwischen zwei Containern geben.
