--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/nl/de/messages.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/nl/de/messages.properties
@@ -249,6 +249,7 @@ MostDslQuickfixProvider_AddPreUpdateListenerAndAssignThisMethodToIt=Einen pre up
 MostDslQuickfixProvider_AddRootPanel=Root-Panel hinzufügen
 MostDslQuickfixProvider_AddSearchPanel=Suchpanel hinzufügen
 MostDslQuickfixProvider_AddSomeExampleOperations=Einige Beispiel-Operationen hinzufügen
+MostDslQuickfixProvider_AddStandardFieldsFlag=Flag für Standardfelder hinzufügen
 MostDslQuickfixProvider_AddStartEvent=Startereignis hinzufügen
 MostDslQuickfixProvider_AddStringField=String-Feld hinzufügen
 MostDslQuickfixProvider_AddSubmitButton=Submit-Button hinzufügen
@@ -362,9 +363,9 @@ MostDslQuickfixProvider_IncreaseLengthToBecomeHigherThanScale=Länge erhöhen und 
 MostDslQuickfixProvider_IncreaseLengthToEqualMinimumLength=Länge erhöhen und gleich der minimalen Länge setzen
 MostDslQuickfixProvider_IncreaseMaximumValueToEqualMinimumValue=Maximalen Wert erhöhen und gleich dem minimalen Wert setzen
 MostDslQuickfixProvider_IncreaseMaximumVersionToEqualMinimumVersion=Maximale Version erhöhen und gleich der minimalen Version setzen
-MostDslQuickfixProvider_KeepFirst=Ersten behalten
-MostDslQuickfixProvider_KeepLast=Letzten behalten
-MostDslQuickfixProvider_KeepThis=Diesen behalten
+MostDslQuickfixProvider_KeepFirst=Erstes Vorkommen behalten
+MostDslQuickfixProvider_KeepLast=Letztes Vorkommen behalten
+MostDslQuickfixProvider_KeepThis=Dieses Vorkommen behalten
 MostDslQuickfixProvider_Lower=Herabsetzen
 MostDslQuickfixProvider_LowerMinLength=Min Länge herabsetzen
 MostDslQuickfixProvider_LowerMinValue=Min Wert herabsetzen
@@ -379,24 +380,25 @@ MostDslQuickfixProvider_ReduceDefaultValue=Standardwert reduzieren
 MostDslQuickfixProvider_ReduceMaxValue=Maximalwert reduzieren
 MostDslQuickfixProvider_ReduceMinValue=Minimalwert reduzieren
 MostDslQuickfixProvider_Remove=Entfernen
-MostDslQuickfixProvider_RemoveAggregateFlag=aggregate-Flag entfernen
+MostDslQuickfixProvider_RemoveAggregateFlag=Das aggregate-Flag entfernen
 MostDslQuickfixProvider_RemoveAllLayoutOrdersBetweenTheToContainersExceptTheFirstOne=Alle Layout Orders zwischen den zwei Containern außer der ersten entfernen
 MostDslQuickfixProvider_RemoveAllLayoutOrdersBetweenTheToContainersExceptTheLastOne=Alle Layout Orders zwischen den zwei Containern außer der letzten entfernen
 MostDslQuickfixProvider_RemoveAllOutgoingInheritanceRelationshipsExceptTheFirstOne=Alle ausgehenden Vererbungsbeziehungen außer der ersten entfernen
 MostDslQuickfixProvider_RemoveAllOutgoingInheritanceRelationshipsExceptTheLastOne=Alle ausgehenden Vererbungsbeziehungen außer der letzten entfernen
 MostDslQuickfixProvider_RemoveAllTransitionsBetweenTheTwoActionsExceptTheFirstOne=Alle Übergänge zwischen den zwei Aktionen außer dem ersten entfernen
 MostDslQuickfixProvider_RemoveAllTransitionsBetweenTheTwoActionsExceptTheLastOne=Alle Übergänge zwischen den zwei Aktionen außer dem letzten entfernen
-MostDslQuickfixProvider_RemoveColourFlag=colour-Flag entfernen
-MostDslQuickfixProvider_RemoveCountryFlag=country-Flag entfernen
+MostDslQuickfixProvider_RemoveColourFlag=Das colour-Flag entfernen
+MostDslQuickfixProvider_RemoveCountryFlag=Das country-Flag entfernen
 MostDslQuickfixProvider_RemoveDeleteActionFromTheController1=Die Delete-Aktion vom Controller '
 MostDslQuickfixProvider_RemoveDeleteActionFromTheController2=' entfernen
-MostDslQuickfixProvider_RemoveGeographicalFlag=geographical-Flag entfernen
-MostDslQuickfixProvider_RemoveLanguageFlag=language-Flag entfernen
+MostDslQuickfixProvider_RemoveGeographicalFlag=Das geographical-Flag entfernen
+MostDslQuickfixProvider_RemoveLanguageFlag=Das language-Flag entfernen
 MostDslQuickfixProvider_RemoveLayoutOrder=Layout Order entfernen
-MostDslQuickfixProvider_RemoveLoggableFlag=loggable-Flag entfernen
-MostDslQuickfixProvider_RemoveMandatoryFlag=mandatory-Flag entfernen
-MostDslQuickfixProvider_RemoveNullableFlag=nullable-Flag entfernen
-MostDslQuickfixProvider_RemovePrimaryKeyFlag=PK-Flag entfernen
+MostDslQuickfixProvider_RemoveLoggableFlag=Das loggable-Flag entfernen
+MostDslQuickfixProvider_RemoveMandatoryFlag=Das mandatory-Flag entfernen
+MostDslQuickfixProvider_RemoveNullableFlag=Das nullable-Flag entfernen
+MostDslQuickfixProvider_RemoveOwnerPermissionFlag=Das ownerPermission-Flag entfernen
+MostDslQuickfixProvider_RemovePrimaryKeyFlag=Das PK-Flag entfernen
 MostDslQuickfixProvider_RemoveSuperclassFlag=superclass-Flag entfernen
 MostDslQuickfixProvider_RemoveTheCountryFlag=Das country-Flag entfernen
 MostDslQuickfixProvider_RemoveTheElement=Das Element entfernen
@@ -413,7 +415,7 @@ MostDslQuickfixProvider_RemoveTheTransitionElement=Das Übergangselement entferne
 MostDslQuickfixProvider_RemoveTheUnrequiredGeographicalField=Das unbenötigte geographical-Feld entfernen
 MostDslQuickfixProvider_RemoveTheUnrequiredSlugField=Das unbenötigte slug-Feld entfernen
 MostDslQuickfixProvider_RemoveTransition=Übergang entfernen
-MostDslQuickfixProvider_RemoveVersionFlag=version-Flag entfernen
+MostDslQuickfixProvider_RemoveVersionFlag=Das version-Flag entfernen
 MostDslQuickfixProvider_RemoveViewActionFromTheController1=View-Aktion vom Controller '
 MostDslQuickfixProvider_RemoveViewActionFromTheController2=' entfernen
 MostDslQuickfixProvider_RenameTheElementsUsingACounter=Die Elemente mit einem Zähler umbenennen
@@ -454,8 +456,10 @@ MostDslQuickfixProvider_SetToExample=Auf Beispiel setzen
 MostDslQuickfixProvider_SetToNow=Auf now setzen
 MostDslQuickfixProvider_SetToZero=Auf null setzen
 MostDslQuickfixProvider_Shrink=Schrumpfen
+MostDslQuickfixProvider_UnsetAllEndDatesExceptThisOne=Alle Enddatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider_UnsetAllSortableGroupFlagsExceptTheFirstOne=Alle sortable group-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider_UnsetAllSortablePositionFlagsExceptTheFirstOne=Alle sortable position-Flags außer dem ersten zurücksetzen
+MostDslQuickfixProvider_UnsetAllStartDatesExceptThisOne=Alle Startdatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider_UnsetAllVersionFlagsExceptThisOne=Alle version-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider_UnsetsAllFlagsExceptCountry=Alle Flags außer country zurücksetzen
 MostDslQuickfixProvider_UnsetsAllFlagsExceptHtmlColour=Alle Flags außer html colour zurücksetzen
@@ -464,6 +468,8 @@ MostDslQuickfixProvider_UnsetsAllFlagsExceptPassword=Alle Flags außer password z
 MostDslQuickfixProvider_UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider_UnsetSluggablePosition=Die Sluggable Position zurücksetzen
 MostDslQuickfixProvider_UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
+MostDslQuickfixProvider_UnsetTheArchiveFlag=Das Archiv-Flag zurücksetzen
+MostDslQuickfixProvider_UnsetTheEndDateFlag=Das Enddatum-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheFutureFlag=Das future-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheMandatoryFlag=Das mandatory-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheNullableFlag=Das nullable-Flag zurücksetzen
@@ -471,15 +477,18 @@ MostDslQuickfixProvider_UnsetThePastFlag=Das past-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetThePrimaryKeyFlag=Das primary key-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheSortableGroupFlag=Das sortable group-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheSortablePositionFlag=Das sortable position-Flag zurücksetzen
+MostDslQuickfixProvider_UnsetTheStartDateFlag=Das Startdatum-Flag zurücksetzen
 MostDslQuickfixProvider_UnsetTheVersionFlag=Das version-Flag zurücksetzen
 MostDslQuickfixProvider_UseAsColour=Als Farbe verwenden
 MostDslQuickfixProvider_UseAsCountry=Als Land verwenden
+MostDslQuickfixProvider_UseAsEndDate=Als Enddatum verwenden
 MostDslQuickfixProvider_UseAsFuture=Als Zukunft verwenden
 MostDslQuickfixProvider_UseAsLanguage=Als Sprache verwenden
 MostDslQuickfixProvider_UseAsPassword=Als Kennwort verwenden
 MostDslQuickfixProvider_UseAsPast=Als Vergangenheit verwenden
 MostDslQuickfixProvider_UseAsSortableField=Als Sortierfeld verwenden
 MostDslQuickfixProvider_UseAsSortableGroup=Als Sortiergruppierung verwenden
+MostDslQuickfixProvider_UseAsStartDate=Als Startdatum verwenden
 MostDslQuickfixProvider_UseFirst=Den ersten verwenden
 MostDslQuickfixProvider_UseFirstOne=Den ersten verwenden
 MostDslQuickfixProvider_UseTheFirstActionRemoveTheOthers=Die erste Aktion verwenden, die anderen entfernen
