add new defines

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -394,8 +394,16 @@ _UI_AbstractDateField_timestampableChangeTriggerField_feature = Timestampable Ch
 _UI_AbstractDateField_timestampableChangeTriggerField_description = Timestampable Change Trigger Feldname.
 _UI_AbstractDateField_timestampableChangeTriggerValue_feature = Timestampable Change Trigger Wert
 _UI_AbstractDateField_timestampableChangeTriggerValue_description = Timestampable Change Trigger Feldwert.
+_UI_DatetimeField_startDate_feature = Startdatum
+_UI_DatetimeField_startDate_description = Ob dieses Feld als ein Startdatum behandelt werden soll.
+_UI_DatetimeField_endDate_feature = Enddatum
+_UI_DatetimeField_endDate_description = Ob dieses Feld als ein Enddatum behandelt werden soll.
 _UI_DatetimeField_version_feature = Version
 _UI_DatetimeField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
+_UI_DateField_startDate_feature = Startdatum
+_UI_DateField_startDate_description = Ob dieses Feld als ein Startdatum behandelt werden soll.
+_UI_DateField_endDate_feature = Enddatum
+_UI_DateField_endDate_description = Ob dieses Feld als ein Enddatum behandelt werden soll.
 _UI_EntityIndex_items_feature = Einträge
 _UI_EntityIndex_items_description = Liste von Einträgen, die in diesem Index enthalten sind.
 _UI_EntityIndex_type_feature = Typ
